# tap

./: .firebaserc  .gitignore  README.md  firebase.json  pubspec.yaml  pyproject.toml
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
functions/: main.py  requirements.txt
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: confirm.dart  home.dart  login.dart  main.dart  nfc_success_animation.dart
